tests/specs/run/error_014_catch_dynamic_import_error/error_014_catch_dynamic_import_error.js.out
Caught direct dynamic import error.
TypeError: Import "does not exist" not a dependency
    at [WILDCARD]/error_014_catch_dynamic_import_error.js:3:18

    at [WILDCARD]/error_014_catch_dynamic_import_error.js:3:5 {
  code: "ERR_MODULE_NOT_FOUND"
}
Caught indirect direct dynamic import error.
TypeError: Import "does not exist either" not a dependency
    at [WILDCARD]/indirect_import_error.js:1:15
    at async [WILDCARD]/error_014_catch_dynamic_import_error.js:10:5 {
  code: "ERR_MODULE_NOT_FOUND"
}
Caught error thrown by dynamically imported module.
Error: An error
    at [WILDCARD]/throws.js:6:7
Caught error thrown indirectly by dynamically imported module.
Error: An error
    at [WILDCARD]/throws.js:6:7
